# BaseDefense

./: .gitignore  CMakeLists.txt  README.md  ajustes.txt  modelagem.txt
include/: base.h  config.h  drops.h  game.h  inimigo.h  inimigo_tanque.h  inimigo_veloz.h  municao.h  player.h  projetil.h  projetil_inimigo.h  texture_manager.h  utils.h
src/: base.cpp  drops.cpp  game.cpp  inimigo.cpp  inimigo_tanque.cpp  inimigo_veloz.cpp  main.cpp  municao.cpp  player.cpp  projetil.cpp  projetil_inimigo.cpp  texture_managegr.cpp  utils.cpp
